sass/theme/_theme.scss
// This is an empty scss file for your custom styles - Please add your super duper awesome mega design styles here

@media (min-width: 601px) {
    body.admin-bar {
        .navbar-wrapper {
            top: 46px;
        }
    }
}

@media (min-width: 783px) {
    body.admin-bar {
        .navbar-wrapper {
            top: 32px;
        }
    }
}

$navbar-logo-vertical-offset: 2px;
nav.navbar {
    background-color: #444444;
    background: linear-gradient(rgba(255, 255, 255, 0.15) 0,#FFFFFF00 56px), url('../img/stone.jpg');
    background-size: 126px;
    image-rendering: crisp-edges;
    
    .navbar-toggler {
        color: #FFFFFF;
    }

    .custom-logo-link {
        padding: 0;
        margin-top: calc(-.5rem + #{$navbar-logo-vertical-offset});
        margin-bottom: calc(-.5rem + #{$navbar-logo-vertical-offset});


        img {
            max-height: #{56px - $navbar-logo-vertical-offset * 2};
            width: auto;
        }
    }

    .navbar-nav .dropdown-menu {
        background-color: transparent;
        border: none;

        @include media-breakpoint-up(sm) {
            background-color: #444444;
            background-image: url('../img/stone.jpg');
            background-size: 126px;
            image-rendering: crisp-edges;
        }

        &:hover,
        &:focus,
        &:active {
            background-color: inherit;
        }

        li {

            a {
                color: $navbar-dark-color;

                &:hover,
                &:focus,
                &:active {
                    color: $navbar-dark-hover-color;
                    background-color: inherit;
                }
            }

            &.active {
                a {
                    color: $navbar-dark-active-color;
                }
            }
        }
    }
}

.bg-stone {
    background-color: #444444;
    background-image: url('../img/stone.jpg');
    background-size: 126px;
    image-rendering: crisp-edges;
}

section.hero {
    background-size: cover;
    background-position: center center;
    background-attachment: fixed;

    .title {
        color: #fff;
        text-shadow: 0px 0px 3px rgba(0,0,0,0.75);
        font-size: 3rem;

        a {
            color: inherit;
            font-size: inherit;
            font-weight: bold;
        }
    }
}

article.post,
article.page,
section.not-found {
    background-color: #efefef;
    background: url('../img/wool_colored_white.png');
    background-size: 126px;
    image-rendering: crisp-edges;
    border: 1px solid #c2c2c2;
    min-height: 192px;

    .entry-inner,
    .page-inner {
        background: linear-gradient(23deg, #efefef 42%,#efefef00 100%);

        .entry-header,
        .entry-content,
        .entry-footer,
        .page-header,
        .page-content {
            padding: #{$grid-gutter-width / 2};
        }

        .entry-title,
        .page-title {
            color: lighten(#000000, 5%);

            a {
                color: inherit;
            }
        }
    }
}

.post.sticky {
    background: url(../img/gold_block.png);
    background-size: 126px;

    .entry-inner,
    .page-inner {
        background: linear-gradient(23deg, #fffcc4 42%,#ffffff00 100%);
    }
}

.widget {
    &:not(.widget_search) {
        background: url(../img/block-overlay.png), #383b3f;
        background-size: 126px;
        image-rendering: crisp-edges;
        padding: #{$grid-gutter-width / 2};

        h3.widget-title {
            color: #FFF;
        }

        ul {
            list-style-type: none;
            padding-left: 0;
            color: darken(#FFFFFF, 15%);

            li {
                a {
                    color: inherit;
                }
            }
        }
    }
}

div.comments-area {
    background-color: #efefef;
    background: url('../img/planks_oak.png');
    background-size: 126px;
    image-rendering: crisp-edges;
    border: 1px solid #755e3a;
    min-height: 192px;

    .comments-area-inner {
        padding: #{$grid-gutter-width / 2};
        background: linear-gradient(23deg, #af8e58 42%,#af8e5800 100%);

        ol {
            padding: 0;
            list-style-type: none;

            li.comment {
                position: relative;

                article {
                    background-color: $body-bg;
                    padding: #{$grid-gutter-width / 4};

                    @include media-breakpoint-up(sm) {
                        margin-left: #{$comment-avatar-size + $comment-avatar-spacing * 2};
                    }

                    .comment-meta {
                        .comment-author {
                            .avatar {
                                width: $comment-avatar-size;
                                height: auto;

                                @include media-breakpoint-up(sm) {
                                    position: absolute;
                                    top: $comment-avatar-spacing;
                                    left: $comment-avatar-spacing;
                                }
                            }
                        }
                    }

                    .reply {
                        text-align: right;
                    }
                }
            }
        }

        ol.children {
            margin-left: #{$grid-gutter-width / 2};

            @include media-breakpoint-up(sm) {
                margin-left: #{$comment-avatar-size + $comment-avatar-spacing * 2};
            }

            li.comment {
                margin-top: 1rem;
            }
        }
        
        .comment-form {
            font-weight: bold;
        }
    }
}

footer.page-footer {
    background-color: #444444;
    background: url('../img/stone.jpg');
    background-size: 126px;
    image-rendering: crisp-edges;
    padding: 3rem 0;
    color: darken(#FFFFFF, 20%);

    a {
        color: #FFF;
    }
}

.btn {
    background-image: url('../img/block-overlay.png');
}

input.field {
    background: darken(#FFFFFF, 2%) url('../img/block-overlay-light.png');
}

.block-bottom {
    display: block;
    width: 100%;
    height: 8px;
    position: relative;
    clear: both;

    span.left,
    span.right {
        height: 8px;
        width: 8px;
        display: block;
        position: absolute;
    }

    span.left {
        top:0;
        left:0;
        background: url('../img/block-bottom-left.png') top right no-repeat;
    }

    span.right {
        top:0;
        right:0;
        background: url('../img/block-bottom-right.png') top right no-repeat;
    }

    span.middle {
        width: 100%;
        padding: 0 7px;
        height: 8px;
        display: block;

        span {
            display: block;
            background-color: #C2C2C2;
            height: 8px;
        }
    }

    &.stone {
        span.left {
            background: url('../img/block-bottom-stone-left.png') top right no-repeat;
        }
    
        span.right {
            background: url('../img/block-bottom-stone-right.png') top right no-repeat;
        }
    
        span.middle {
            span {
                background-color: #2d2d2d;
            }
        }
    }

    &.wood {
        span.left {
            background: url('../img/block-bottom-wood-left.png') top right no-repeat;
        }
    
        span.right {
            background: url('../img/block-bottom-wood-right.png') top right no-repeat;
        }
    
        span.middle {
            span {
                background-color: #755e3a;
            }
        }
    }
}

.parent-widget_search {
    .block-bottom {
        display: none;
    }
}

.server-sign {
    position: relative;
    z-index: 10;

    &:before {
        content: '';
        height: 100vh;
        position: absolute;
        width: 16px;
        top: 0;
        left: calc(50% - 8px);
        background-image: url(../img/planks_oak.png);
        background-size: 126px;
        image-rendering: crisp-edges;
        z-index: -1;
    }

    .server-sign-inner {
        background-image: url('../img/planks_oak.png');
        background-size: 126px;
        image-rendering: crisp-edges;
        max-width: 350px;
        box-shadow: 0px 0px 10px 0px #000000;
        border: 2px solid #000000;
        padding: 7px;
        font-size: 0.85rem;
        font-family: 'Press Start 2P', cursive;
        font-weight:bold;
        color: #FFFFFF;
    }
}

